# toy

./: Cargo.toml  LICENSE  README.md  publish.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: latest.yml  rust.yml
tests/: Cargo.toml  tests.rs
tools/: publish.sh  test.sh
tools/internals/: publish.sh  test.sh
toy_ast/: Cargo.toml
toy_ast/src/: lib.rs
toy_codegen/: Cargo.toml
toy_codegen/src/: lib.rs
toy_macros/: Cargo.toml
toy_runtime/: Cargo.toml  README.md
toy_share/: Cargo.toml
toy_share/src/: lib.rs
toyc/: Cargo.toml  README.md
toyc/src/: diagnostics.rs  lexer.rs  lib.rs  traverse.rs  util.rs  value.rs
toyc/src/lexer/: transform.rs
toyc/src/parser/: mod.rs
toylang/: Cargo.toml  README.md
toyvm/: Cargo.toml  README.md
