[package]
version = "0.1.0"
name = "Toy"
authors = ["WhyNotDogie"]
description = "Toylang"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["Compilers", "Command line utilities", "Development tools", "Parser implementations", "Emulators"]

[[bin]]
name = "toy"
path = "toylang/src/main.rs"

[workspace]

default-members = ["toylang"]

members = [
    "toylang",
    "toyc",
    "toyvm"
]