[package]
name = "toy_macros"
version = "0.1.0"
edition = "2021"
authors = ["WhyNotDogie"]
description = "Toylang development macros"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["development-tools"]
workspace = "../"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = "2.0.15"
