[package]
name = "toy_runtime"
version = "0.1.0"
edition = "2021"
authors = ["WhyNotDogie"]
description = "The toylang bytecode runtime API"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["emulators", "command-line-utilities", "development-tools"]
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
