[package]
name = "toy_share"
version = "0.1.4"
edition = "2021"
authors = ["WhyNotDogie"]
description = "Toylang development macros"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.162", features = ["derive"] }
