[package]
name = "toyc"
version = "0.1.0"
edition = "2021"
authors = ["WhyNotDogie"]
description = "The toylang compiler"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["Compilers", "Command line utilities", "Development tools", "Parser implementations"]
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
