[package]
name = "toylang"
version = "0.1.1"
edition = "2021"
authors = ["WhyNotDogie"]
description = "The toylang CLI/Wrapper"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["compilers", "command-line-utilities", "development-tools", "parser-implementations", "emulators"]
workspace = "../"

[[bin]]
name = "toy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
