[package]
name = "toyvm"
version = "0.1.0"
edition = "2021"
authors = ["WhyNotDogie"]
description = "The toylang CLI/Wrapper"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["Command line utilities", "Emulators"]
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
