[package]
name = "toyvm"
version = "0.1.3"
edition = "2021"
authors = ["WhyNotDogie"]
description = "The toylang CLI/Wrapper"
repository = "https://github.com/toy-lang/toy/"
license = "ISC"
keywords = ["toylang", "toy"]
categories = ["command-line-utilities", "emulators"]
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy_runtime = { version = "0.1.*", path = "../toy_runtime" }